--- a/main.css
+++ b/main.css
@@ -54,6 +54,14 @@ body {
     color: aqua;
     transition: all 300ms ease;
   }
+  .rating.active small:after {
+    content: "✓";
+    color: green;
+    font-size: 20px;
+    position: absolute;
+    top: 2px;
+    right: 10px;
+  }
   
   .btn {
     background-color: darkcyan;
