--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-body {
+/*using relative unit*/
+  body {
     margin: 0;
     background-color: mediumslateblue;
     color: darkgreen;
@@ -9,10 +10,12 @@ body {
     font-family: monospace;
   }
   
+  
   .container {
+    /* Use rgba for transparency */
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
+    border-radius: 1rem; /* Use relative units */;
     padding: 20px;
     width: 85%;
     max-width: 400px;
