--- a/main.css
+++ b/main.css
@@ -15,10 +15,10 @@
     /* Use rgba for transparency */
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-    border-radius: 1rem; /* Use relative units */;
+    border-radius: 1rem; /* Use relative units */
     padding: 20px;
     width: 85%;
-    max-width: 400px;
+    max-width: 25rem; /* Use rem units */
     text-align: center;
     font-size: 20px;
     clip-path: circle(50%);
